tests/machine/x/fs/string_in_operator.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/string_in_operator.fs(4,21): error FS0010: Unexpected keyword 'in' in expression
