tests/machine/x/fs/string_in_operator.fs
open System

let s: string = "catch"
printfn "%s" (List.contains "cat" s)
printfn "%s" (List.contains "dog" s)
